# ichida-algo

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  speed_demo_cpu.sh  speed_demo_gpu.sh  weights_and_biases.txt
.github/workflows/: ci.yml  cpp-linter.yml
benchmark/: benchmark.c  util.h
benchmark/cpu/matrix_add/: matrix_add.h
benchmark/cpu/matrix_add/versions/: matrix_add_v1.c
benchmark/cpu/matrix_mul/: plot.py
benchmark/cpu/matrix_mul/versions/: matrix_mul_v1.c  matrix_mul_v2.c
benchmark/cpu/relu/versions/: relu_v1.c  relu_v2.c
benchmark/cpu/softmax/: plot.py
benchmark/gpu/matrix_add/: Makefile  benchmark.cu  plot.py  template.cuh
benchmark/matrix_add/: Makefile  benchmark.c  matrix_add.h
benchmark/matrix_add/versions/: 1.cu  cpu.cu  matrix_add_v1.c
benchmark/matrix_mul/: Makefile  benchmark.c  matrix_mul.h  plot.py
benchmark/matrix_mul/versions/: matrix_mul_v1.c  matrix_mul_v2.c
benchmark/multithreading/: plot.py
benchmark/relu/: Makefile  benchmark.c  plot.py  relu.h
benchmark/relu/versions/: relu_v1.c  relu_v2.c
benchmark/softmax/: benchmark.c  plot.py  softmax.h
benchmark/softmax/versions/: softmax_v1.c
cuda/benchmark/matrix_add/: Makefile  benchmark.cu  plot.py  template.cuh
cuda/benchmark/matrix_add/versions/: 1.cu  cpu.cu
cuda/src/: main.cu  main_gpu.cu  matrix.cu  matrix.cuh  matrix_gpu.cu  util.cuh
cudasrc/: main.cu  matrix.cu  matrix.cuh  util.cuh
include/: matrix.h  util.h
script/: convertbin.py  filemaker.py
src/: file_io.c  file_io.h  main.c  main.cu  matrix.c  matrix.cu  matrix.cuh  matrix.h  matrix_gpu.cu  util.h
src/cuda/: main_gpu.cu
tensors/: 01out.txt  02out.txt  03out.txt  04out.txt  05out.txt  06out.txt  07out.txt  08out.txt  09out.txt  10out.txt  11out.txt  12out.txt  13out.txt  14out.txt  15out.txt  16out.txt  17out.txt  18out.txt  19out.txt  20out.txt  21out.txt  22out.txt  23out.txt  24out.txt  25out.txt  26out.txt  27out.txt  28out.txt  29out.txt  30out.txt  31out.txt  32out.txt  33out.txt  34out.txt  35out.txt  36out.txt  37out.txt  38out.txt  39out.txt  40out.txt  (+12 more)
test/: expected_results.csv  verify_csv.py
